polarstomps-ui/polarstomps-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: polarstomps
  labels:
    elbv2.k8s.aws/pod-readiness-gate-inject: enabled
