polarstomps-ui/polarstomps-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polarstomps
spec:
  strategy: RollingUpdate
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: polarstomps
  template:
    metadata:
      labels:
        app: polarstomps
    spec:
      containers:
        - image: howdoicomputer/polarstomps:v1
          name: polarstomps
          ports:
            - containerPort: 8080
