polarstomps-ui/polarstomps-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: polarstomps
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-alb-target-type: instance
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: polarstomps
