polarstomps-ui/polarstomps-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polarstomps-ingress
  namespace: polarstomps
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: polarstomps
                port:
                  name: http
